force-app/main/default/objects/ssot__CustodyChainEntry__dlm/fields/ssot__CustodianObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustodianObject__c</fullName>
    <label>Custodian Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustodianObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>