force-app/main/default/objects/ssot__CustodyChainEntry__dlm/fields/ssot__CustodyChainEntryVerfProcType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustodyChainEntryVerfProcType__c</fullName>
    <label>Custody Chain Entry Verf Proc Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustodyChainEntryVerfProcType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>