force-app/main/default/objects/ssot__CustodyChainEntry__dlm/fields/ssot__CustodyChainEntryVerfType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CustodyChainEntryVerfType__c</fullName>
    <label>Custody Chain Entry Verf Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CustodyChainEntryVerfType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>