force-app/main/default/objects/ssot__CustodyChainEntry__dlm/fields/ssot__ItemCustodySiteId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemCustodySiteId__c</fullName>
    <label>Item Custody Site</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemCustodySiteId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>