force-app/main/default/objects/ssot__CustodyChainEntry__dlm/fields/ssot__RecordUpdateInformation__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordUpdateInformation__c</fullName>
    <label>Record Update Information</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordUpdateInformation</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>