force-app/main/default/objects/ssot__CustodyChainEntry__dlm/fields/ssot__rel_1731658762337_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658762337_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustodyChainEntry_CustodyItemId_map__rel</label>
    <referenceTo>ssot__CustodyItem__dlm</referenceTo>
    <relationshipLabel>CustodyChainEntry_CustodyItemId_map__rel</relationshipLabel>
    <relationshipName>rel_1731658762337_end</relationshipName>
    <type>Lookup</type>
</CustomField>