force-app/main/default/objects/ssot__CustodyChainEntry__dlm/fields/ssot__rel_1731658769239_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658769239_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustodyChainEntry_CustodianId_map_Ac_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>CustodyChainEntry_CustodianId_map_Ac_rel</relationshipLabel>
    <relationshipName>rel_1731658769239_end</relationshipName>
    <type>Lookup</type>
</CustomField>